# multi-sand-sim

./: .env.example  .gitignore  README.md
backend/: .gitignore  README.md  mix.exs
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/backend/: application.ex  global_sim.ex  snapshot.ex
backend/lib/backend_web/: cors_plug.ex  endpoint.ex  error_json.ex  router.ex  user_socket.ex
backend/lib/backend_web/channels/: global_channel.ex
backend/lib/backend_web/controllers/: health_controller.ex
frontend/: README.md  eslint.config.js  package.json  vite.config.ts
frontend/src/: app.d.ts
frontend/src/routes/: +page.svelte
physics_engine/: Cargo.toml  build.sh
physics_engine/src/: constants.rs  errors.rs  gpu_resources.rs  lib.rs  shaders.rs  types.rs
physics_engine/src/sand_engine/: init.rs  internal.rs  mod.rs  public_api.rs
physics_engine/src/shaders/: brush.wgsl  sand_update.wgsl
scripts/: rebuild-wasm.sh
