[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

wgpu = "28.0.0"
bytemuck = { version = "1.25", features = ["derive"] }

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
